# interviews

./: Makefile  makeall.bsh
2013/c-c++/: virtprivate.cpp
2016/: companyinfo.txt
2016/bloomberg/: challenge.txt  compile.sh  worldcurrencyproblem.cpp.txt
2016/google/: fstat  removeduplicates.cpp
2016/hbk/: chessdialer.cpp  chesstest.txt  staircase.cpp
2016/interactivebrokers/: a.cpp  b.cpp  c.cpp  carrental.cpp  d.cpp  defaultinit.cpp  e.cpp  f.cpp  g.cpp  h.cpp  memset.cpp  reduce.cpp  stringreverse.c  subseq.cpp  test-ib-corrections.docx
2016/mongodb/: bfs.cpp  bintreerecursionvsiteration.cpp  dfs.cpp  onsite.txt  out  sharedlock.cpp.txt  stack.cpp
2016/symbiont/: random.bsh
2016/tudor/: phonescreen.cpp
2019/amazon/: recgrapftrav.cpp
2019/google/: notes.txt
2020/: tradeweb.txt
2020/amazon/: numberofislands.cpp
2020/apple/: question.cpp
2020/elementus/: Makefile  q1.txt  q2.txt  traversedirectedgraph.cpp  traversedirectedgraph.in.tc1
2020/facebook/: Makefile  mylru.cpp
2020/flow_traders/: Makefile  a6.txt  q1.cpp  (+25 more)
2020/techolution/jniprime/: CMakeLists.txt
2020/techolution/jniprime/com/: com_techolution.cpp  com_techolution.h  techolution.java
examples/: constrefopt.cpp  vector_grows_factor.cpp
hackerrank/: forloops.cpp  magic_square_test_cases.txt  nondivset.cpp  nondivset.gfg.cpp  stringdeleteappend.cpp
pzl/: 6outof10.cpp  brownian_motion_barriers.txt  coins.txt  coupon_to_head_and_tail_problem.cpp  exp_pi_inequality.txt  hardy_ramanujan.txt  money_distribution.txt  rabbit.txt  ropes.txt  theater_row.cpp  unfavorable_fair_game.cpp
(+254 files in other folders)
